# DevaNet

./: README.md  pyproject.toml
src/: cnn.py  config.py  dataset.py  loader.py  main.py  test.py  train.py  transforms.py
