[project]
name = "devanet"
version = "0.1.0"
description = "A CNN based classifier for classifying devanagari numerals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
# Tells Pyright the venv is inside the current directory (".")
venvPath = "."
# Tells Pyright the folder name is exactly ".venv"
venv = ".venv"
# Turns down the extreme strictness
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
